# rocThrust-examples

./: LICENSE  README.md
benchmarks/: CMakeLists.txt  dummy.cpp  run_benchmarks.sh
benchmarks/copy/: benchmarks.hip.cpp  copy.hip.h
benchmarks/norm/: benchmarks.hip.cpp  norm.hip.h
benchmarks/saxpy/: benchmarks.hip.cpp  saxpy.hip.h
benchmarks/scan/: CMakeLists.txt  benchmarks.hip.cpp  scan.hip.h
benchmarks/sort/: benchmarks.hip.cpp  sort.hip.h
benchmarks/sum/: benchmarks.hip.cpp  sum.hip.h
benchmarks/utils/: CMakeLists.txt  gpu_utils.h
cmake/: SetupHIP.cmake
hybrid/: CMakeLists.txt  build.sh  run.sh
hybrid/rank_color/: main.cpp
hybrid/saxpy/: CMakeLists.txt  main.cpp  saxpy.h  saxpy.hip.cpp
hybrid/sum/: main.cpp  sum.h  sum.hip.cpp
hybrid/utils/: CMakeLists.txt  gpu_tinytimer.hip.cpp  gpu_utils.h  gpu_utils.hip.cpp  log_utils.h  mpi_utils.cpp  mpi_utils.h  tinyrecord.h  tinytimer.h
hybrid_mpi_hip/: CMakeLists.txt  build.sh  run.sh
hybrid_mpi_hip/rank_color/: CMakeLists.txt  main.cpp
hybrid_mpi_hip/saxpy/: main.cpp  saxpy.h  saxpy.hip.cpp
hybrid_mpi_hip/sum/: CMakeLists.txt  main.cpp
hybrid_mpi_hip/utils/: CMakeLists.txt  gpu_utils.h  gpu_utils.hip.cpp  mpi_utils.h
